--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,15 @@
     <!--[if IE 7]>
     	<link rel="stylesheet" href="ie7.css" type="text/css" media="screen" />
     <![endif]-->
-    
-   <script type="text/javascript" src="/assets/jquery.js"></script>
+    <link rel="stylesheet" href="/assets/application.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="/assets/jquery.js"></script>
     <script type="text/javascript" src="/assets/application.js"></script>
     
 </head>
 
 <body>
 
-    <header> <!-- HTML5 header tag -->
+    
     
     	<div id="headercontainer">
     
@@ -30,18 +30,18 @@
     		
     		<nav> <!-- HTML5 navigation tag -->
     			<ul>
-    				<li><a class="introlink anchorLink" href="#intro">Buscar track</a></li>
+    				<li><a class="introlink anchorLink" href="#intro">Buscar Cancion</a></li>
     				<li><a class="portfoliolink anchorLink" href="listalbum">Buscar Album</a></li>
-    				<li><a class="aboutlink anchorLink" href="#about">Crear track</a></li>
+    				<li><a class="aboutlink anchorLink" href="#about">Crear cancion</a></li>
     				<li><a class="contactlink anchorLink" href="#contact">Buscar artista</a></li>
     				<li><a class="contactlink anchorLink" href="#contact">Buscar artistas similares</a></li>
-    				<li><a class="contactlink anchorLink" href="#contact">Consultar mis tracks</a></li>
+    				<li><a class="contactlink anchorLink" href="#contact">Consultar mis canciones</a></li>
     			</ul>				
     		</nav>
     	
     	</div>
     
-    </header>
+    
 
     <section id="contentcontainer"> <!-- HTML5 section tag for the content 'section' -->
     
