--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     
     	<div id="headercontainer">
     
+    		<h1><a class="introlink anchorLink" href="#intro">Last FM</a></h1>
     		
     		<nav> <!-- HTML5 navigation tag -->
     			<ul>
