--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <!-- This is a demonstration of HTML5 goodness with healthy does of CSS3 mixed in -->
 <head>
     
-    <title>Lastfm -- Puntos Adicionales </title>
+    <title>Proyecto Lastfm</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     			
     <!--[if IE]>
@@ -30,11 +30,11 @@
     		
     		<nav> <!-- HTML5 navigation tag -->
     			<ul>
-    				<li><a class="introlink anchorLink" href="#intro">Buscar Cancion</a></li>
+    				<li><a class="introlink anchorLink" href="#intro">Buscar Canciones</a></li>
     				<li><a class="portfoliolink anchorLink" href="listalbum">Buscar Album</a></li>
     				<li><a class="aboutlink anchorLink" href="#about">Crear cancion</a></li>
     				<li><a class="contactlink anchorLink" href="#contact">Buscar artista</a></li>
-    				<li><a class="contactlink anchorLink" href="#contact">Buscar artistas similares</a></li>
+    				<li><a class="contactlink anchorLink" href="#contact">Buscar artistas Similares</a></li>
     				<li><a class="contactlink anchorLink" href="#contact">Consultar mis canciones</a></li>
     			</ul>				
     		</nav>
