--- a/app/views/main/listalbums.html.erb
+++ b/app/views/main/listalbums.html.erb
@@ -7,8 +7,8 @@
 <% @hasta.to_i %>
 <table >
   <tr>
-    <th>.:: Img ::.</th>
-    <th>.:: Album ::.</th>
+    <th>.:: Imagen ::.</th>
+    <th>.:: Albunes ::.</th>
     <th>.:: Artista ::.</th>
   </tr>
 <% i = 0 %>
