--- a/app/views/main/_formlistalbums.html.erb
+++ b/app/views/main/_formlistalbums.html.erb
@@ -1,3 +1,3 @@
 <input type="text" id="txtbuscar"/>
-<input type="button" value ="Buscar"/ onclick= "buscar();" >
+<input type="button" value ="Encontrar"/ onclick= "buscar();" >
 
